--- a/requirements.txt
+++ b/requirements.txt
@@ -2,23 +2,82 @@
 
 aiohttp==3.9.3
 aiosignal==1.3.1
+annotated-types==0.6.0
+anyio==4.3.0
+asttokens==2.4.1
 async-timeout==4.0.3
 attrs==23.2.0
 certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
+comm==0.2.2
 cssselect==1.2.0
+debugpy==1.8.1
+decorator==5.1.1
+dnspython==2.6.1
+email_validator==2.1.1
+exceptiongroup==1.2.0
+executing==2.0.1
+fastapi==0.110.0
 frozenlist==1.4.1
+h11==0.14.0
+httpcore==1.0.4
+httptools==0.6.1
+httpx==0.27.0
 idna==3.6
+ipykernel==6.29.3
+ipython==8.22.2
+itsdangerous==2.1.2
+jedi==0.19.1
+Jinja2==3.1.3
 jmespath==1.0.1
+jupyter_client==8.6.1
+jupyter_core==5.7.2
 lxml==5.1.0
+MarkupSafe==2.1.5
+matplotlib-inline==0.1.6
 multidict==6.0.5
+nest-asyncio==1.6.0
+numpy==1.26.4
+orjson==3.9.15
 packaging==23.2
+pandas==2.2.1
 parsel==1.8.1
+parso==0.8.3
+platformdirs==4.2.0
+prompt-toolkit==3.0.43
+psutil==5.9.8
+pure-eval==0.2.2
+pydantic==2.6.4
+pydantic-extra-types==2.6.0
+pydantic-settings==2.2.1
+pydantic_core==2.16.3
+Pygments==2.17.2
+pymongo==4.6.2
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+python-multipart==0.0.9
+pytz==2024.1
+pywin32==306
 PyYAML==6.0.1
+pyzmq==25.1.2
 requests==2.31.0
 selectorlib==0.16.0
+six==1.16.0
+sniffio==1.3.1
+stack-data==0.6.3
+starlette==0.36.3
+tornado==6.4
+traitlets==5.14.2
+typing_extensions==4.10.0
+tzdata==2024.1
+ujson==5.9.0
 urllib3==2.2.1
+uvicorn==0.28.0
 w3lib==2.1.2
+watchfiles==0.21.0
+wcwidth==0.2.13
+websockets==12.0
+xlrd==2.0.1
 yarl==1.9.4
