Update MongoDB connection and add grade fields to product data 🌿

--- a/scraper/selectors/cartlow_product.yml
+++ b/scraper/selectors/cartlow_product.yml
@@ -20,7 +20,7 @@ images:
     css: 'img.cz-image-zoom'
     type: Attribute
     attribute: src
-renewed:
+grade:
     css: 'span#conditions_current_value_front'
     xpath: null
     type: Text
