--- a/scraper/selectors/amazon_product.yml
+++ b/scraper/selectors/amazon_product.yml
@@ -30,7 +30,7 @@ images:
     css: '.imgTagWrapper img'
     type: Attribute
     attribute: src
-renewed:
+grade:
     css: 'div[data-feature-name="renewedSingleOfferCaption"] .a-text-normal'
     xpath: null
     type: Text
