--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,21 +2,17 @@ version: "3.8"
 
 services:
   web:
+    # image: radioactive1109/r3-scraper:v1
     container_name: web-container
     build:
       context: .
       dockerfile: Dockerfile
       args:
         requirements_file: requirements.txt
-    stdin_open: true
-    tty: true
     ports:
-      - "8000:8000"
+      - "80:8000"
     depends_on:
       - mongodb
-    volumes:
-      - .:/app
-      - data:/app/data
     restart: always
 
   mongodb:
@@ -29,7 +25,5 @@ services:
     restart: always
 
 volumes:
-  data:
-    driver: local
   mongo_data:
     driver: local
