--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ debugpy==1.8.1
 decorator==5.1.1
 dnspython==2.6.1
 email_validator==2.1.1
+et-xmlfile==1.1.0
 exceptiongroup==1.2.0
 executing==2.0.1
 fastapi==0.110.0
@@ -27,6 +28,7 @@ httptools==0.6.1
 httpx==0.27.0
 idna==3.6
 ipykernel==6.29.3
+ipynb==0.5.1
 ipython==8.22.2
 itsdangerous==2.1.2
 jedi==0.19.1
@@ -34,12 +36,14 @@ Jinja2==3.1.3
 jmespath==1.0.1
 jupyter_client==8.6.1
 jupyter_core==5.7.2
+logging==0.4.9.6
 lxml==5.1.0
 MarkupSafe==2.1.5
 matplotlib-inline==0.1.6
 multidict==6.0.5
 nest-asyncio==1.6.0
 numpy==1.26.4
+openpyxl==3.1.2
 orjson==3.9.15
 packaging==23.2
 pandas==2.2.1
