--- a/requirements.txt
+++ b/requirements.txt
@@ -66,6 +66,7 @@ PyYAML==6.0.1
 pyzmq==25.1.2
 requests==2.31.0
 selectorlib==0.16.0
+selenium==4.20.0
 six==1.16.0
 sniffio==1.3.1
 stack-data==0.6.3
